# hip_windows_cmake_template

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
